# project_RG

./: .gitignore  Alarm.cpp  Alarm.h  CMakeLists.txt  Client.cpp  Client.h  Doxyfile  README.md  Server.cpp  Server.h  SharedData.cpp  generate_docs.sh  groups.h  main.cpp  mainpage.h  project_RG.sln  project_RG.vcxproj  project_RG.vcxproj.filters
ClientApp/: CMakeLists.txt
ClientApp/src/: ClientApp.cpp
DaemonApp/: CMakeLists.txt
DaemonApp/src/: DaemonApp.cpp
DaemonLib/: CMakeLists.txt
DaemonLib/include/: DaemonBase.h
DaemonLib/src/: DaemonBase.cpp
Protocol/: CMakeLists.txt  Get.cpp  Set.cpp  System.cpp  System.h  SystemData.cpp
Protocol/include/: Get.h  Set.h  SystemData.h
Protocol/src/: Get.cpp  Set.cpp  System.cpp  SystemData.cpp
System/: CMakeLists.txt
System/include/: Alarm.h  CMakeLists.txt  MONITOR.h  Server.h  ServerDaemon.h  SharedData.h
System/src/: Alarm.cpp  Client.cpp  MONITOR.cpp  Server.cpp  ServerDaemon.cpp  SharedData.cpp
Test/: CMakeLists.txt  Test_Queue.vcxproj  Test_Queue.vcxproj.filters  gtest.h  t.cpp  test  test_system.cpp
Test/x64/Debug/: Test_Queue.exe.recipe  vc143.idb
Test/x64/Debug/Test_Queue.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Test_Queue.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
docs/html/: ALARM_8cpp.html  ALARM_8h.html  Alarm_8cpp.html  Alarm_8cpp__incl.map  Alarm_8cpp__incl.md5  Alarm_8h.html  Alarm_8h__dep__incl.map  Alarm_8h__dep__incl.md5  Alarm_8h__incl.map  Alarm_8h__incl.md5  Alarm_8h_source.html  CMakeCXXCompilerId_8cpp.html  Client_8cpp.html  Client_8cpp__incl.map  Client_8cpp__incl.md5  Client_8h.html  Client_8h__dep__incl.map  Client_8h__dep__incl.md5  Client_8h__incl.map  Client_8h__incl.md5  Client_8h_source.html  Get_8cpp.html  Get_8cpp__incl.map  Get_8cpp__incl.md5  Get_8h.html  Get_8h__dep__incl.map  Get_8h__dep__incl.md5  Get_8h__incl.map  Get_8h__incl.md5  Get_8h_source.html  Server_8cpp.html  Server_8cpp__incl.map  Server_8cpp__incl.md5  Server_8h.html  Server_8h__dep__incl.map  Server_8h__dep__incl.md5  Server_8h__incl.map  Server_8h__incl.md5  Server_8h_source.html  Set_8cpp.html  (+2063 more)
docs/html/search/: search.idx
project_RG/x64/Debug/: project_RG.exe.recipe  project_RG.ilk  vc143.idb
project_RG/x64/Debug/project_RG.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  project_RG.lastbuildstate
